--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,7 +5,7 @@ buildscript {
   }
 
   dependencies {
-    classpath "com.android.tools.build:gradle:8.8.0"
+    classpath "com.android.tools.build:gradle:8.8.2"
   }
 }
 
@@ -133,6 +133,8 @@ dependencies {
   // For > 0.71, this will be replaced by `com.facebook.react:react-android:$version` by react gradle plugin
   //noinspection GradleDynamicVersion
   implementation "com.facebook.react:react-native:+"
+
+  implementation 'com.github.tachiyomiorg:unifile:e0def6b3dc'
 
   // Add a dependency on NitroModules
   implementation project(":react-native-nitro-modules")
