feat: drop commonjs support

--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "react-native-unifile",
   "version": "0.2.4",
   "description": "Nitro module package",
-  "main": "./lib/commonjs/index.js",
-  "module": "./lib/module/index.js",
+  "main": "./lib/module/index.js",
   "types": "./lib/typescript/src/index.d.ts",
   "react-native": "src/index",
   "source": "src/index",
@@ -56,7 +55,7 @@
     "nitro-codegen": "0.25.1",
     "react": "19.0.0",
     "react-native": "0.78.0",
-    "react-native-builder-bob": "^0.39.0",
+    "react-native-builder-bob": "^0.40.6",
     "react-native-nitro-modules": "0.25.1",
     "release-it": "^18.1.2",
     "typescript": "5.0.4"
@@ -104,7 +103,6 @@
     "source": "src",
     "output": "lib",
     "targets": [
-      "commonjs",
       "module",
       [
         "typescript",
