--- a/package.json
+++ b/package.json
@@ -48,17 +48,17 @@
   },
   "devDependencies": {
     "@jamesacarr/eslint-formatter-github-actions": "^0.2.0",
-    "@release-it/bumper": "^7.0.2",
-    "@release-it/conventional-changelog": "^10.0.0",
+    "@release-it/bumper": "^7.0.5",
+    "@release-it/conventional-changelog": "^10.0.1",
     "@types/jest": "^29.5.14",
     "@types/react": "^19.0.10",
     "nitro-codegen": "0.25.1",
     "react": "19.0.0",
     "react-native": "0.78.0",
-    "react-native-builder-bob": "^0.40.6",
+    "react-native-builder-bob": "^0.40.11",
     "react-native-nitro-modules": "0.25.1",
-    "release-it": "^18.1.2",
-    "typescript": "5.0.4"
+    "release-it": "^19.0.2",
+    "typescript": "^5.8.3"
   },
   "peerDependencies": {
     "react": "*",
@@ -159,5 +159,9 @@
         "infile": "CHANGELOG.md"
       }
     }
-  }
+  },
+  "trustedDependencies": [
+    "nitro-codegen",
+    "react-native-nitro-modules"
+  ]
 }
