chore: update nitro to 0.26.2

--- a/example/package.json
+++ b/example/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "react": "19.0.0",
     "react-native": "0.78.0",
-    "react-native-nitro-modules": "0.25.1"
+    "react-native-nitro-modules": "^0.26.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
