--- a/package.json
+++ b/package.json
@@ -51,12 +51,12 @@
     "@release-it/bumper": "^7.0.5",
     "@release-it/conventional-changelog": "^10.0.1",
     "@types/jest": "^29.5.14",
-    "@types/react": "^19.0.10",
-    "nitro-codegen": "0.25.1",
+    "@types/react": "^19.1.8",
+    "nitro-codegen": "^0.26.2",
     "react": "19.0.0",
     "react-native": "0.78.0",
     "react-native-builder-bob": "^0.40.11",
-    "react-native-nitro-modules": "0.25.1",
+    "react-native-nitro-modules": "^0.26.2",
     "release-it": "^19.0.3",
     "typescript": "^5.8.3"
   },
